cabal-version:       2.2
name:                kurita
version:             0
synopsis:            The alpha emoji
-- description:
homepage:            https://oss.xkcd.com/
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              davean
maintainer:          oss@xkcd.com
-- copyright:
category:            Game
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Kurita.Bot
    Kurita.Bot.Connection
    Kurita.Bot.Types
    Kurita.Emoji
    Kurita.Protocol
    Kurita.Server
    Kurita.Prompt
    Kurita.Prompt.Filter
    Kurita.Prompt.Internal
  build-depends:
        aeson                ^>= 1.4
      , approximate          ^>= 0.3
      , async                ^>= 2.2
      , base                 ^>= 4.12
      , atomic-write         ^>= 0.2
      , broadcast-chan       ^>= 0.2
      , bytestring           ^>= 0.10
      , containers           ^>= 0.6
      , delay                ^>= 0
      , double-metaphone     ^>= 0
      , hashable             ^>= 1.2
      , http-types           ^>= 0.12
      , hyperloglog          ^>= 0.4
      , lens                 ^>= 4.17
      , linklater            ^>= 4.0
      , megaparsec           ^>= 7.0
      , monad-loops          ^>= 0.4
      , mtl                  ^>= 2.2
      , parser-combinators   ^>= 1.0
      , random               ^>= 1.1
      , reflection           ^>= 2.1
      , sorted-list          ^>= 0.2
      , split                ^>= 0.2
      , stm                  ^>= 2.5
      , text                 ^>= 1.2
      , time                 ^>= 1.9
      , unordered-containers ^>= 0.2
      , uri-bytestring       ^>= 0.3
      , vector               ^>= 0.12
      , wai                  ^>= 3.2
      , wai-websockets       ^>= 3.0
      , websockets           ^>= 0.12
      , wreq                 ^>= 0.5
      , wuss                 ^>= 1.1

executable kurita
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts=all -threaded
  build-depends:
      base
    , bits
    , bytes
    , delay
    , kurita
    , siphash
    , text
    , time
    , warp

executable kurita-central
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Central.hs
  ghc-options:         -rtsopts=all -threaded
  build-depends:
      base
    , bytestring
    , containers
    , delay
    , kurita
    , linklater
    , siphash
    , stm
    , text
    , time
    , warp

executable kurita-relay
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Relay.hs
  ghc-options:         -rtsopts=all -threaded
  build-depends:
      base
    , bits
    , bytes
    , kurita
    , siphash
    , text
    , time
    , warp

executable kurita-client
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -rtsopts=all -threaded
  build-depends:
      aeson
    , async
    , base
    , bytestring
    , kurita
    , monad-loops
    , text
    , time
    , websockets

test-suite kurita-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.12.0.0
